[project]
name = "portfolio"
version = "0.1.0"
description = "A comprehensive equity portfolio visualization, optimization, and Monte Carlo simulation tool."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=4.0.0",
    "yfinance>=0.2.36",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
    "pyportfolioopt>=1.5.5",
    "quantstats>=0.0.62",
    "statsmodels>=0.14.1",
    "pyarrow>=23.0.1",
    "scikit-learn>=1.8.0",
    "cvxpy>=1.4.1",
    "jupyter>=1.1.1",
    "nbformat>=5.10.4",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
